added github, contact info, and nav/foot

--- a/about.html
+++ b/about.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1> ABOUT </h1>
+    <nav class="buttons">
+        <a href="index.html">Home</a>
+        <a href="about.html" target="_blank">About Me</a>
+        <a href="contact.html" target="_blank">Contact Me</a>
+        <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
+    </nav>
+    <div>
+        <p>about me text</p>
+    </div>
+    <footer>
+        <nav class="footer-buttons">
+            <a href="index.html" taget="_blank">Home</a>
+            <a href="contact.html" target="_blank">Contact Me</a>
+            <a href="about.html" target='_blank'>About Me</a>
+            <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
+        </nav>  
+      </footer>
 </body>
 </html>
