--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="index.html">Home</a>
                     <a href="about.html" target="_blank">About Me</a>
                     <a href="contact.html" target="_blank">Contact Me</a>
-                    <a href="projects.html" target="_blank">My Projects</a>
+                    <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
                 </nav>
             <div class="small-container">
                 <h2>Introducing My Site</h2>
@@ -40,9 +40,10 @@
     </section>
     <footer>
       <nav class="footer-buttons">
+          <a href="index.html" taget="_blank">Home</a>
           <a href="contact.html" target="_blank">Contact Me</a>
-          <a href="https://www.instagram.com/ginxy13th/" target="_blank">Instagram</a>
-          <a href="https://www.facebook.com/jane.puckett/" target="_blank">Facebook</a>
+          <a href="about.html" target='_blank'>About Me</a>
+          <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
       </nav>  
     </footer>
     
