--- a/contact.html
+++ b/contact.html
@@ -7,26 +7,30 @@
 </head>
 <body>
     <h1> CONTACT </h1>
-    <section id="footer">
+    <nav class="buttons">
+        <a href="index.html">Home</a>
+        <a href="about.html" target="_blank">About Me</a>
+        <a href="contact.html" target="_blank">Contact Me</a>
+        <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
+    </nav>
         <div class="inner">
             <h2 class="major">Get in touch</h2>
             <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
             <ul class="contact">
-                <li class="icon solid fa-home">
-                    Untitled Inc<br />
-                    1234 Somewhere Road Suite #2894<br />
-                    Nashville, TN 00000-0000
-                </li>
-                <li class="icon solid fa-phone">(000) 000-0000</li>
-                <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-                <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-                <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-                <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-            </ul>
-            <ul class="copyright">
-                <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>(678) 818-7387</li>
+                <li><p>j.elizabeth.bailey13@gmail.com</p></li>
+                <li><a href="https://www.facebook.com/jane.puckett/">Facebook</a></li>
+                <li><a href="https://www.instagram.com/ginxy13th/">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/j-elizabeth-bailey/">LinkedIn</a></li>
             </ul>
         </div>
-    </section>
+        <footer>
+            <nav class="footer-buttons">
+                <a href="index.html" taget="_blank">Home</a>
+                <a href="contact.html" target="_blank">Contact Me</a>
+                <a href="about.html" target='_blank'>About Me</a>
+                <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
+            </nav>  
+          </footer>
 </body>
 </html>
