--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </div>
     <footer>
         <nav class="footer-buttons">
-            <a href="index.html" taget="_blank">Home</a>
+            <a href="index.html" target="_blank">Home</a>
             <a href="contact.html" target="_blank">Contact Me</a>
             <a href="about.html" target='_blank'>About Me</a>
             <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
