--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <link rel="reset" href="./style/reset.css">
+        <link rel="noralize" href="./style/normalize.css">
+        <link rel="stylesheet" href="./style/index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Document</title>
+    </head>
 <body>
     <h1> CONTACT </h1>
     <nav class="buttons">
-        <a href="index.html">Home</a>
-        <a href="about.html" target="_blank">About Me</a>
-        <a href="contact.html" target="_blank">Contact Me</a>
+        <a href="index.html" target="_self">Home</a>
+        <a href="about.html" target="_self">About Me</a>
+        <a href="contact.html" target="_self">Contact Me</a>
         <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
     </nav>
         <div class="inner">
@@ -26,9 +30,9 @@
         </div>
         <footer>
             <nav class="footer-buttons">
-                <a href="index.html" taget="_blank">Home</a>
-                <a href="contact.html" target="_blank">Contact Me</a>
-                <a href="about.html" target='_blank'>About Me</a>
+                <a href="index.html" target="_self">Home</a>
+                <a href="contact.html" target="_self">Contact Me</a>
+                <a href="about.html" target='_self'>About Me</a>
                 <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
             </nav>  
           </footer>
