--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="container">
             <h1>Jane Elizabeth Bailey</h1>
                 <nav class="buttons">
-                    <a href="index.html">Home</a>
-                    <a href="about.html" target="_blank">About Me</a>
-                    <a href="contact.html" target="_blank">Contact Me</a>
+                    <a href="index.html" target="_self">Home</a>
+                    <a href="about.html" target="_self">About Me</a>
+                    <a href="contact.html" target="_self">Contact Me</a>
                     <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
                 </nav>
             <div class="small-container">
@@ -40,9 +40,9 @@
     </section>
     <footer>
       <nav class="footer-buttons">
-          <a href="index.html" taget="_blank">Home</a>
-          <a href="contact.html" target="_blank">Contact Me</a>
-          <a href="about.html" target='_blank'>About Me</a>
+          <a href="index.html" target="_self">Home</a>
+          <a href="contact.html" target="_self">Contact Me</a>
+          <a href="about.html" target='_self'>About Me</a>
           <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
       </nav>  
     </footer>
