initial commit for the day

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
                     <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
                 </nav>
             <div class="small-container">
-                <h2>Introducing My Site</h2>
-                <p>My name is J. Elizabeth Bailey, and I am a current student at Lambda School for Full-Stack Web Development.</br>
-                    This is going to be my portfoliio. Below are some of my home-made cinnamon rolls.</p>
+                <h2>Technologies</h2>
+                <div class="list">
+                    <li class="tech">HTML5</li>
+                    <li class="tech">CSS</li>
+                    <li class="tech">Javascript</li>
+                    <li class="tech">React</li>
+                </div>
             </div>
         </div>
     </header>
