--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
         <a href="contact.html" target="_self">Contact Me</a>
         <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
     </nav>
-        <div class="inner">
-            <h2 class="major">Get in touch</h2>
+        <div>
+            <h2>Get in touch</h2>
             <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-            <ul class="contact">
+            <ul>
                 <li>(678) 818-7387</li>
                 <li><p>j.elizabeth.bailey13@gmail.com</p></li>
                 <li><a href="https://www.facebook.com/jane.puckett/">Facebook</a></li>
