--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="index.html" target="_self">Home</a>
           <a href="contact.html" target="_self">Contact Me</a>
           <a href="about.html" target='_self'>About Me</a>
-          <a href="https://github.com/ginxy13th" taget="_blank">Projects</a>
+          <a href="https://github.com/ginxy13th" target="_blank">Projects</a>
       </nav>  
     </footer>
     
