changed techs to about me, adjusting styling on home

--- a/about.html
+++ b/about.html
@@ -19,6 +19,23 @@
     </nav>
     <div>
         <p>about me text</p>
+        <div class="list">
+            <li class="tech">HTML5</li>
+            <li class="tech">CSS</li>
+            <li class="tech">Javascript</li>
+            <li class="tech">React</li>
+            <li class='tech'>Redux</li>
+            <li class='tech'>Python</li>
+            <li class='tech'>Context API</li>
+            <li class="tech">Express</li>
+            <li class='tech'>Node</li>
+            <li class='tech'>End-to-End Testing</li>
+            <li class='tech'>Jest</li>
+            <li class='tech'>GIT/Bash</li>
+            <li class="tech">GitHub</li>
+            <li class='tech'>SQL</li>
+            <li class='tech'>PostGres</li>
+        </div>
     </div>
     <footer>
         <nav class="footer-buttons">
