--- a/index.html
+++ b/index.html
@@ -13,26 +13,23 @@
     <header> 
         <div class="container">
             <h1>Jane Elizabeth Bailey</h1>
-                <nav class="buttons">
-                    <a href="index.html" target="_self">Home</a>
-                    <a href="about.html" target="_self">About Me</a>
-                    <a href="contact.html" target="_self">Contact Me</a>
-                    <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
-                </nav>
+            <nav class="buttons">
+                <a href="index.html" target="_self">Home</a>
+                <a href="about.html" target="_self">About Me</a>
+                <a href="contact.html" target="_self">Contact Me</a>                    
+                <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
+            </nav>
             <div class="small-container">
-                <h2>Technologies</h2>
-                <div class="list">
-                    <li class="tech">HTML5</li>
-                    <li class="tech">CSS</li>
-                    <li class="tech">Javascript</li>
-                    <li class="tech">React</li>
-                </div>
+                <p>Thank you for checking out my portfolio and welcome!</p>
+                <p>Below are some of my favorite projects and be sure to check my About Me!</p>
+            
             </div>
         </div>
     </header>
     <section>
         <div class="content">
             <img src="style/rolls.jpg" alt="cinnamon-rolls">
+            <p>text about the project above blah blah blah</p>
             <div class="projects">
                 <img id="project1" src="style/cat.jpg" alt="cat">
                 <img id="project2" src="style/cat2.jpg" alt="cat2">
