--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <a href="index.html" target="_self">Home</a>
         <a href="about.html" target="_self">About Me</a>
         <a href="contact.html" target="_self">Contact Me</a>
-        <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
+        <a href="https://github.com/ginxy13th" target="_blank">GitHub</a>
     </nav>
         <div>
             <h2>Get in touch</h2>
@@ -33,7 +33,7 @@
                 <a href="index.html" target="_self">Home</a>
                 <a href="contact.html" target="_self">Contact Me</a>
                 <a href="about.html" target='_self'>About Me</a>
-                <a href="https://github.com/ginxy13th" target="_blank">Projects</a>
+                <a href="https://github.com/ginxy13th" target="_blank">GitHub</a>
             </nav>  
           </footer>
 </body>
