--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="index.html" target="_self">Home</a>
                 <a href="about.html" target="_self">About Me</a>
                 <a href="contact.html" target="_self">Contact Me</a>                    
-                <a href="https://github.com/ginxy13th" target="_blank">My Projects</a>
+                <a href="https://github.com/ginxy13th" target="_blank">GitHub</a>
             </nav>
             <div class="small-container">
                 <p>Thank you for checking out my portfolio and welcome!</p>
@@ -44,7 +44,7 @@
           <a href="index.html" target="_self">Home</a>
           <a href="contact.html" target="_self">Contact Me</a>
           <a href="about.html" target='_self'>About Me</a>
-          <a href="https://github.com/ginxy13th" target="_blank">Projects</a>
+          <a href="https://github.com/ginxy13th" target="_blank">GitHub</a>
       </nav>  
     </footer>
     
