added ss of 1st project and link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </header>
     <section>
         <div class="content">
-            <img src="style/rolls.jpg" alt="cinnamon-rolls">
+            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
+            <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p>text about the project above blah blah blah</p>
             <div class="projects">
                 <img id="project1" src="style/cat.jpg" alt="cat">
