--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
             <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
             <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p2>text about the project above blah blah blah</p2>
-            <!-- <div class="projects">
-                <img id="project1" src="style/cat.jpg" alt="cat">
-                <img id="project2" src="style/cat2.jpg" alt="cat2">
-                <img id="project3" src="style/cat3.jpg" alt="cat3">
-                <img id="project4" src="style/cats4.jpg" alt="cat4">
-                <p2>Projects coming soon! But for now, please enjoy these pictures of my cats!!</p>
-            </div> -->
+            
+            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
+            <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
+            <p2>text about the project above blah blah blah</p2>
+
+            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
+            <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
+            <p2>text about the project above blah blah blah</p2>
+            
+            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
+            <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
+            <p2>text about the project above blah blah blah</p2>
         </div>
     </section>
     <footer>
