--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p2>text about the project above blah blah blah</p2>
             
-            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
-            <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
+            <img src="style/githubprofilecards.jpg" alt="screenshot of react github profile cards">
+            <a class='title' href="https://react-github-user-card-hazel-omega.vercel.app/" target='_blank'>GitHub Profile Card and Follower's Cards</a>
             <p2>text about the project above blah blah blah</p2>
 
             <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
             <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p2>text about the project above blah blah blah</p2>
-            
+
             <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
             <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p2>text about the project above blah blah blah</p2>
