fixed style for min screen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section>
         <div class="content">
-            <img src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
+            <img  id='img-one' src="style/cards against breaking swanson.jpg" alt="screenshot of cards against breaking swanson web page">
             <a class='title' href="https://card-against-breaking-swanson.vercel.app/" target='_blank'>Cards Against Breaking Swanson</a>
             <p2>text about the project above blah blah blah</p2>
             
