--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="reset" href="./style/reset.css">
     <link rel="noralize" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
